Second wave of modifications

--- a/laundry.html
+++ b/laundry.html
@@ -10,7 +10,9 @@
 <body>
     
     <header>
-        <img src="./assets/images/back-arrow.svg" alt="">
+        <a href="./home.html">
+            <img src="./assets/images/back-arrow.svg" alt="">
+        </a>
         <h5>Laundry</h5>
         <img src="./assets/images/portrait.jpg" alt="">
     </header>
