--- a/lock.html
+++ b/lock.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./laundry.css">
+    <link rel="stylesheet" href="./lock.css">
     <title>LOCK</title>
 </head>
 <body>
     
     <header>
-        <img src="./assets/images/back-arrow.svg" alt="">
+        <a href="./home.html">
+            <img src="./assets/images/back-arrow.svg" alt="">
+        </a>
         <h5>Lock</h5>
         <img src="./assets/images/portrait.jpg" alt="">
     </header>
@@ -18,7 +20,15 @@
     <main>
         <h2>Did you lock the door?</h2>
         <img src="./assets/images/lock-illustration.svg" alt="">
-        
+        <div class="switch">
+            <div class="btn-toggle">
+                <img src="./assets/images/lock-open.svg" alt="">
+            </div>
+            <p>Unlocked</p>
+            <!-- <span class="btn-toggle">
+            </span> -->
+            <!-- <p>Unlocked</p> -->
+        </div>
     </main>
 
     <footer>
@@ -29,5 +39,6 @@
         <img src="./assets/images/sofa-dark-icon.svg" alt="">
     </footer>
 
+    <script src="./js.js"></script>
 </body>
 </html>
