--- a/tvroom.html
+++ b/tvroom.html
@@ -10,7 +10,9 @@
 <body>
     
     <header>
-        <img src="./assets/images/back-arrow.svg" alt="">
+        <a href="./home.html">
+            <img src="./assets/images/back-arrow.svg" alt="">
+        </a>
         <h5>TV room</h5>
         <img src="./assets/images/portrait.jpg" alt="">
     </header>
@@ -18,7 +20,7 @@
     <main>
         <h2>Do you need the <br> TV room?</h2>
         <img src="./assets/images/tvroom-illustration.svg" alt="">
-        <a href="#">Book it now</a>
+        <a href="https://aarhuskollegiet.as.me/schedule.php">Book it now</a>
     </main>
 
     <footer>
