--- a/cleaning.html
+++ b/cleaning.html
@@ -10,13 +10,17 @@
 <body>
     
     <header>
-        <img src="./assets/images/back-arrow.svg" alt="">
+        <a href="./home.html">
+            <img src="./assets/images/back-arrow.svg" alt="">
+        </a>
         <h5>Cleaning</h5>
         <img src="./assets/images/portrait.jpg" alt="">
     </header>
 
     <main>
         <h2>Oh...it's your turn</h2>
+
+        <iframe class="calendar" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FCopenhagen&amp;src=ZW5lYS5yb2JlcnRvQGdtYWlsLmNvbQ&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZmFtaWx5MDU5ODI0NzkyMjk2ODEwODU4OTRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=ZW4ucm9tYW5pYW4jaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;color=%23E67C73&amp;color=%2333B679&amp;color=%23E4C441&amp;color=%230B8043" width="300" height="300" frameborder="0" scrolling="no"></iframe>
 
         <h3>Team 3</h3>
     </main>
@@ -29,5 +33,6 @@
         <img src="./assets/images/sofa-dark-icon.svg" alt="">
     </footer>
 
+    
 </body>
 </html>
