--- a/home.html
+++ b/home.html
@@ -14,27 +14,36 @@
             <h2>Hello Mads!</h2>
             <img src="./assets/images/portrait.jpg" alt="">
         </div>
-        <img src="./assets/images/weather.jpg" alt="">
+        <a class="weatherwidget-io" href="https://forecast7.com/en/56d1510d11/brabrand/" data-label_1="BRABRAND" data-label_2="WEATHER" data-icons="Climacons Animated" data-mode="Current" data-days="3" data-theme="weather_one" >BRABRAND WEATHER</a>
+
     </header>
 
     <main>
         <div class="main-container">
-            <div class="card">
-                <img src="./assets/images/washing-machine-icon.svg" alt="">
-                <h4>LAUNDRY</h4>
-            </div>
-            <div class="card">
-                <img src="./assets/images/lock-icon.svg" alt="">
-                <h4>LOCK</h4>
-            </div>
-            <div class="card">
-                <img src="./assets/images/clean-icon.svg" alt="">
-                <h4>CLEANING</h4>
-            </div>
-            <div class="card">
-                <img src="./assets/images/sofa-icon.svg" alt="">
-                <h4>TV ROOM</h4>
-            </div>
+            <a href="./laundry.html">
+                <div class="card">
+                    <img src="./assets/images/washing-machine-icon.svg" alt="">
+                    <h4>LAUNDRY</h4>
+                </div>
+            </a>
+            <a href="./lock.html">
+                <div class="card">
+                    <img src="./assets/images/lock-icon.svg" alt="">
+                    <h4>LOCK</h4>
+                </div>
+            </a>
+            <a href="./cleaning.html">
+                <div class="card">
+                    <img src="./assets/images/clean-icon.svg" alt="">
+                    <h4>CLEANING</h4>
+                </div>
+            </a>
+            <a href="./tvroom.html">
+                <div class="card">
+                    <img src="./assets/images/sofa-icon.svg" alt="">
+                    <h4>TV ROOM</h4>
+                </div>
+            </a>
         </div>
     </main>
 
@@ -46,5 +55,8 @@
         <img src="./assets/images/sofa-dark-icon.svg" alt="">
     </footer>
 
+    <script>
+        !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+        </script>
 </body>
 </html>
