--- a/loginmain.html
+++ b/loginmain.html
@@ -188,7 +188,7 @@
 
             for (var i = 0; i < users.length; i++) {
                 if (username == users[i].username && password == users[i].password) {
-                    window.location.href = 'http://some.kngmlnr.com/home.html';
+                    window.location.href = 'onboarding.html';
                     break;
                 } else {
                     alert('Something is not correct, give it another try!');
