--- a/cleaning.html
+++ b/cleaning.html
@@ -1,38 +1,70 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./cleaning.css">
-    <title>CLEANING</title>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="cleaning.css">
+    <title>Cleaning</title>
 </head>
+
 <body>
-    
-    <header>
-        <a href="./home.html">
-            <img src="./assets/images/back-arrow.svg" alt="">
-        </a>
-        <h5>Cleaning</h5>
-        <img src="./assets/images/portrait.jpg" alt="">
-    </header>
+   
+<div class="month">      
+  <ul>
+    <li class="prev">&#10094;</li>
+    <li class="next">&#10095;</li>
+    <li>
+      April<br>
+      <span style="font-size:18px">2021</span>
+    </li>
+  </ul>
+</div>
 
-    <main>
-        <h2>Oh...it's your turn</h2>
+<ul class="weekdays">
+  <li>Mo</li>
+  <li>Tu</li>
+  <li>We</li>
+  <li>Th</li>
+  <li>Fr</li>
+  <li>Sa</li>
+  <li>Su</li>
+</ul>
 
-        <iframe class="calendar" src="https://calendar.google.com/calendar/embed?height=600&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FCopenhagen&amp;src=ZW5lYS5yb2JlcnRvQGdtYWlsLmNvbQ&amp;src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&amp;src=ZmFtaWx5MDU5ODI0NzkyMjk2ODEwODU4OTRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;src=ZW4ucm9tYW5pYW4jaG9saWRheUBncm91cC52LmNhbGVuZGFyLmdvb2dsZS5jb20&amp;color=%23E67C73&amp;color=%2333B679&amp;color=%23E4C441&amp;color=%230B8043" width="300" height="300" frameborder="0" scrolling="no"></iframe>
+<ul class="days">  
+  <li>1</li>
+  <li>2</li>
+  <li>3</li>
+  <li>4</li>
+  <li>5</li>
+  <li>6</li>
+  <li>7</li>
+  <li>8</li>
+  <li>9</li>
+  <li>10</li>
+  <li>11</li>
+  <li>12</li>
+  <li>13</li>
+  <li>14</li>
+  <li>15</li>
+  <li>16</li>
+  <li>17</li>
+  <li>18</li>
+  <li>19</li>
+  <li>20</li>
+  <li>21</li>
+  <li>22</li>
+  <li><span class="active">23</span></li>
+  <li>24</li>
+  <li>25</li>
+  <li>26</li>
+  <li>27</li>
+  <li>28</li>
+  <li>29</li>
+  <li>30</li>
+  <li>31</li>
+</ul>
 
-        <h3>Team 3</h3>
-    </main>
-
-    <footer>
-        <img class="lock-active" src="./assets/images/washing-machine-dark-icon.svg" alt="">
-        <img src="./assets/images/lock-active-icon.svg" alt="">
-        <img src="./assets/images/home-dark-icon.svg" alt="">
-        <img src="./assets/images/clean-dark-icon.svg" alt="">
-        <img src="./assets/images/sofa-dark-icon.svg" alt="">
-    </footer>
-
-    
 </body>
 </html>
+
