--- a/cleaning.html
+++ b/cleaning.html
@@ -1,15 +1,25 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cleaning.css">
-    <title>Cleaning</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./cleaning.css">
+    <title>CLEANING</title>
 </head>
-
 <body>
-   
+    
+    <header>
+        <a href="./home.html">
+            <img src="./assets/images/back-arrow.svg" alt="">
+        </a>
+        <h5>Cleaning</h5>
+        <img src="./assets/images/portrait.jpg" alt="">
+    </header>
+
+    <main>
+        <h2>Oh...it's your turn</h2>
+
 <div class="month">      
   <ul>
     <li class="prev">&#10094;</li>
@@ -64,7 +74,17 @@
   <li>30</li>
   <li>31</li>
 </ul>
+        <h3>Team 3</h3>
+    </main>
 
+    <footer>
+        <img class="lock-active" src="./assets/images/washing-machine-dark-icon.svg" alt="">
+        <img src="./assets/images/lock-active-icon.svg" alt="">
+        <img src="./assets/images/home-dark-icon.svg" alt="">
+        <img src="./assets/images/clean-dark-icon.svg" alt="">
+        <img src="./assets/images/sofa-dark-icon.svg" alt="">
+    </footer>
+
+    
 </body>
 </html>
-
