--- a/home.html
+++ b/home.html
@@ -12,7 +12,9 @@
     <header>
         <div class="header-container">
             <h2>Hello Mads!</h2>
-            <img src="./assets/images/portrait.jpg" alt="">
+            <a href="./profile.html">
+                <img src="./assets/images/portrait.jpg" alt="portrait">
+            </a>
         </div>
         <a class="weatherwidget-io" href="https://forecast7.com/en/56d1510d11/brabrand/" data-label_1="BRABRAND" data-label_2="WEATHER" data-icons="Climacons Animated" data-mode="Current" data-days="3" data-theme="weather_one" >BRABRAND WEATHER</a>
 
@@ -48,11 +50,21 @@
     </main>
 
     <footer>
-        <img src="./assets/images/washing-machine-dark-icon.svg" alt="">
-        <img src="./assets/images/lock-dark-icon.svg" alt="">
-        <img class="home-button" src="./assets/images/home-active-icon.svg" alt="">
-        <img src="./assets/images/clean-dark-icon.svg" alt="">
-        <img src="./assets/images/sofa-dark-icon.svg" alt="">
+        <a href="./laundry.html">
+            <img src="./assets/images/washing-machine-dark-icon.svg" alt="">
+        </a>
+        <a href="./lock.html">
+            <img src="./assets/images/lock-dark-icon.svg" alt="">
+        </a>
+        <a href="#">
+            <img class="home-button" src="./assets/images/home-active-icon.svg" alt="">
+        </a>
+        <a href="./cleaning.html">
+            <img src="./assets/images/clean-dark-icon.svg" alt="">
+        </a>
+        <a href="./tvroom.html">
+            <img src="./assets/images/sofa-dark-icon.svg" alt="">
+        </a>
     </footer>
 
     <script>
