--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>AARHUS Kollegiet</h1>
             <p>Brabrand Housing Associacion</p>
         </div>
-        <a href="#">Get started</a>
+        <a href="loginmain.html">Get started</a>
     </main>
 
     <script src="main.js"></script>
