--- a/laundry.html
+++ b/laundry.html
@@ -27,11 +27,21 @@
     </main>
 
     <footer>
-        <img class="washing-active" src="./assets/images/washing-active-icon.svg" alt="">
-        <img src="./assets/images/lock-dark-icon.svg" alt="">
-        <img src="./assets/images/home-dark-icon.svg" alt="">
-        <img src="./assets/images/clean-dark-icon.svg" alt="">
-        <img src="./assets/images/sofa-dark-icon.svg" alt="">
+        <a href="#">
+            <img class="washing-active" src="./assets/images/washing-active-icon.svg" alt="">
+        </a>
+        <a href="./lock.html">
+            <img src="./assets/images/lock-dark-icon.svg" alt="">
+        </a>
+        <a href="./home.html">
+            <img src="./assets/images/home-dark-icon.svg" alt="">
+        </a>
+        <a href="./cleaning.html">
+            <img src="./assets/images/clean-dark-icon.svg" alt="">
+        </a>
+        <a href="./tvroom.html">
+            <img src="./assets/images/sofa-dark-icon.svg" alt="">    
+        </a>
     </footer>
 
 </body>
