--- a/lock.html
+++ b/lock.html
@@ -32,11 +32,21 @@
     </main>
 
     <footer>
-        <img class="lock-active" src="./assets/images/washing-machine-dark-icon.svg" alt="">
-        <img src="./assets/images/lock-active-icon.svg" alt="">
-        <img src="./assets/images/home-dark-icon.svg" alt="">
-        <img src="./assets/images/clean-dark-icon.svg" alt="">
-        <img src="./assets/images/sofa-dark-icon.svg" alt="">
+        <a href="./laundry.html">
+            <img src="./assets/images/washing-machine-dark-icon.svg" alt="">
+        </a>
+        <a href="#">
+            <img class="lock-active" src="./assets/images/lock-active-icon.svg" alt="">
+        </a>
+        <a href="./home.html">
+            <img src="./assets/images/home-dark-icon.svg" alt="">
+        </a>
+        <a href="./cleaning.html">
+            <img src="./assets/images/clean-dark-icon.svg" alt="">
+        </a>
+        <a href="./tvroom.html">
+            <img src="./assets/images/sofa-dark-icon.svg" alt="">
+        </a>
     </footer>
 
     <script src="./js.js"></script>
