--- a/onboarding.html
+++ b/onboarding.html
@@ -55,7 +55,7 @@
                 <h2 class="slider__caption">Check your cleaning schedule</h2>
                 <img src="09-Cleaner.png" alt="cleaning">
                 <p class="slider__txt">Do you always forget when it is your turn? Follow the cleaning schedule in the App and get notification when it's your call.</p>
-                <a href="#" class="btn2">Enjoy!</a>
+                <a href="home.html" class="btn2">Enjoy!</a>
             </div>
 
         </div>
