--- a/lock.html
+++ b/lock.html
@@ -14,7 +14,9 @@
             <img src="./assets/images/back-arrow.svg" alt="">
         </a>
         <h5>Lock</h5>
-        <img src="./assets/images/portrait.jpg" alt="">
+        <a href="./profile.html">
+            <img src="./assets/images/portrait.jpg" alt="">
+        </a>
     </header>
 
     <main>
