--- a/profile.html
+++ b/profile.html
@@ -61,15 +61,25 @@
             </div>
         </div>
 
-        <a class="logout" href="#">Log out</a>
+        <a class="logout" href="./loginmain.html">Log out</a>
     </main>
 
     <footer>
-        <img src="./assets/images/washing-machine-dark-icon.svg" alt="">
-        <img src="./assets/images/lock-dark-icon.svg" alt="">
-        <img src="./assets/images/home-dark-icon.svg" alt="">
-        <img src="./assets/images/clean-dark-icon.svg" alt="">
-        <img src="./assets/images/sofa-dark-icon.svg" alt="">
+        <a href="./laundry.html">
+            <img src="./assets/images/washing-machine-dark-icon.svg" alt="">
+        </a>
+        <a href="./lock.html">
+            <img src="./assets/images/lock-dark-icon.svg" alt="">
+        </a>
+        <a href="./home.html">
+            <img src="./assets/images/home-dark-icon.svg" alt="">
+        </a>
+        <a href="./cleaning.html">
+            <img src="./assets/images/clean-dark-icon.svg" alt="">
+        </a>
+        <a href="./tvroom.html">
+            <img src="./assets/images/sofa-dark-icon.svg" alt="">
+        </a>
     </footer>
 
     <script src="./js.js"></script>
