--- a/onboarding.html
+++ b/onboarding.html
@@ -7,21 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Onboarding</title>
     <link rel="stylesheet" href="onboarding.css" type="text/css">
+
 </head>
 
 <body>
 
     <div class="slider">
-        <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav" />
+       <!-- <input type="radio" name="slider" title="slide1" checked="checked" class="slider__nav" />
         <input type="radio" name="slider" title="slide2" class="slider__nav" />
         <input type="radio" name="slider" title="slide3" class="slider__nav" />
         <input type="radio" name="slider" title="slide4" class="slider__nav" />
         <input type="radio" name="slider" title="slide5" class="slider__nav" />
 
-
+-->
+       
+       <div class="dots" style="text-align:center">
+  <span class="dot" id="first"></span>
+  <span class="dot" id="second"></span>
+  <span class="dot" id="third"></span>
+   <span class="dot" id="forth"></span>
+    <span class="dot" id="fifth"></span>
+</div>
+       
         <div class="slider__inner">
             <div class="slider__contents"><i class="slider__image"></i>
-               <div class="skip">
+                <div class="skip">
                     <div></div>
                     <p class="skip_btn">skip &#62;</p>
                 </div>
@@ -36,8 +46,8 @@
 
             <div class="slider__contents"><i class="slider__image"></i>
                 <div class="skip">
-                    <p>&#60; back</p>
-                    <p>skip &#62;</p>
+                    <p class="back1">&#60; back</p>
+                    <p class="skip_btn2">skip &#62;</p>
                 </div>
                 <h2 class="slider__caption">Get notification when your can collect your laundry</h2>
                 <img src="78-Laundry.png" alt="laundry">
@@ -46,9 +56,9 @@
             </div>
 
             <div class="slider__contents"><i class="slider__image"></i>
-               <div class="skip">
-                    <p>&#60; back</p>
-                    <p>skip &#62;</p>
+                <div class="skip">
+                    <p class="back2">&#60; back</p>
+                    <p class="skip_btn3">skip &#62;</p>
                 </div>
                 <h2 class="slider__caption">Check if your door is locked</h2>
                 <img src="door%20onboard.png" alt="lock">
@@ -57,9 +67,9 @@
             </div>
 
             <div class="slider__contents"><i class="slider__image"></i>
-               <div class="skip">
-                    <p>&#60; back</p>
-                    <p>skip &#62;</p>
+                <div class="skip">
+                    <p class="back3">&#60; back</p>
+                    <p class="skip_btn4">skip &#62;</p>
                 </div>
                 <h2 class="slider__caption">Enjoy the common area</h2>
                 <img src="tvroom%20onboard.png" alt="tv room">
@@ -68,6 +78,10 @@
             </div>
 
             <div class="slider__contents"><i class="slider__image"></i>
+                <div class="skip">
+                    <p class="back4">&#60; back</p>
+                <div></div>
+                </div>
                 <h2 class="slider__caption">Check your cleaning schedule</h2>
                 <img src="09-Cleaner.png" alt="cleaning">
                 <p class="slider__txt">Do you always forget when it is your turn? Follow the cleaning schedule in the App and get notification when it's your call.</p>
@@ -76,5 +90,7 @@
 
         </div>
     </div>
-    <script src="js2.js"></script>
-</body></html>
+     <script src="js2.js"></script>
+</body>
+
+</html>
