--- a/laundry.html
+++ b/laundry.html
@@ -14,7 +14,9 @@
             <img src="./assets/images/back-arrow.svg" alt="">
         </a>
         <h5>Laundry</h5>
+        <a href="./profile.html">
         <img src="./assets/images/portrait.jpg" alt="">
+        </a>
     </header>
 
     <main>
