--- a/profile.html
+++ b/profile.html
@@ -18,8 +18,8 @@
     </header>
 
     <main>
-        <img class="portrait" src="./assets/images/portrait.jpg" alt="">
-        <h3>Mads</h4>
+        <img class="portrait" src="./assets/images/mads.png" alt="">
+        <h3>Mads</h3>
 
         <div class="address">
             <p>Bulding 8. 1/31</p>
@@ -56,8 +56,8 @@
 
         <div class="language">
             <h4>Language</h4>
-            <div class="switch">
-                <div class="btn-toggle"></div>
+            <div class="switch1">
+                <div class="btn-toggle1"></div>
             </div>
         </div>
 
@@ -73,5 +73,7 @@
     </footer>
 
     <script src="./js.js"></script>
+
+   
 </body>
 </html>
